--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_STORAGE_ENCRYPTION_KEY = Enter you key here
-REACT_APP_BACKEND_URL=http://85.215.62.70/api
+# REACT_APP_BACKEND_URL=http://85.215.62.70/api
+REACT_APP_BACKEND_URL=http://127.0.0.1:8000/api
